--- a/style.css
+++ b/style.css
@@ -48,7 +48,13 @@ section{
     justify-content: space-between;
 }
 section .title{
-    ----
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
 }
 section .title::before{
     content: "";
@@ -128,7 +134,23 @@ section .title::after{
     display: none;
 }
 .scroll-up-btn{
-    ----
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: crimson;
+    right: 30px;
+    bottom: 10px;
+    text-align: center;
+    line-height: 45px;
+    color: #fff;
+    z-index: 9999;
+    font-size: 30px;
+    border-radius: 6px;
+    border-bottom-width: 2px;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
 }
 .scroll-up-btn.show{
     bottom: 30px;
@@ -253,9 +275,9 @@ section .title::after{
     width: calc(33% - 20px);
     background: #222;
     text-align: center;
-    border-radius: 10px;
-    padding: 20px 77px;
-    cursor: divide;
+    border-radius: 6px;
+    padding: 50px 25px;
+    cursor: pointer;
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
@@ -302,10 +324,10 @@ section .title::after{
     background: crimson;
     color: #fff;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
-    border-radius: 10px;
+    border-radius: 6px;
     border: 2px solid crimson;
     transition: all 0.3s ease;
 }
@@ -648,6 +670,11 @@ footer span a:hover{
        width: 150px;
     }
     .scroll-up-btn{
-        -----
+        right: 15px;
+        bottom: 15px;
+        height: 38px;
+        width: 35px;
+        font-size: 23px;
+        line-height: 38px;
     }
 }
